[project]
name = "temporal-cloud-ops-capacity-modes"
version = "0.1.0"
description = "Temporal workflow for automatically managing provisioned capacity in Temporal Cloud namespaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
